# mtga

./: .env.example  .gitignore  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  _run_wrapper.py  build_mac_app.sh  build_onefile.bat  build_probe_onefile.bat  build_standalone.bat  build_v2.bat  create_mac_app.sh  dmg_settings.py  eslint.config.mjs  generate_certs_ds.py  mtga_gui.py  mtga_gui_ds.py  mtga_gui_v2.py  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_mtga_gui.bat  run_mtga_gui.sh  run_mtga_gui_en.bat  run_mtga_gui_en.sh  run_mtga_gui_wrapped.spec  trae_proxy.py  wrapper.md
.claude/: AGENT_CONTEXT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  connection_issue.yml
.github/workflows/: auto-tag-version.yml  build-prerelease-fixed.yml  build-prerelease-tauri.yml  build-prerelease.yml  generate-icns.yml  nuitka-prototype.yml  test-fetch-depth.yml  test-tauri-build-win.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1  setup-plan.ps1  update-agent-context.ps1
.specify/specs/1-add-network-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/templates/: plan-template.md  tasks-template.md
app/: app.vue
app/assets/css/: tailwind.css
app/components/: FooterActions.vue  LogPanel.vue
app/components/dialogs/: ConfirmDialog.vue  UpdateDialog.vue
app/components/panels/: ConfigGroupPanel.vue  GlobalConfigPanel.vue  RuntimeOptionsPanel.vue  SettingsPanel.vue
app/components/tabs/: CertTab.vue  DataManagementTab.vue  HostsTab.vue  MainTabs.vue  ProxyTab.vue
app/components/ui/: MtgaInput.vue  MtgaSelect.vue
app/composables/: icons.ts  mtgaTypes.ts  runtime.ts  useMtgaApi.ts  useMtgaStore.ts
app/docs/: ui-migration.md
app/types/: global.d.ts
archive/: api.deepseek.com.cnf  gencrt_ds.sh  generate_certs.py  generate_google_certs.py  mtga_gui_ds.py
archive/chore/: trae_proxy.py
archive/ds/: api.deepseek.com.subj
archive/mtga-gui/: README.md  build_onefile.bat  build_probe_onefile.bat  run_mtga_gui_en.bat  test_target_api.py
archive/mtga-gui/docs/: ARCHITECTURE.md  README_DMG.md  Windows_Onefile_Build.md
archive/mtga-gui/mac/: Info.plist  MTGA_GUI_Launcher_Fixed  dmg_settings.py  entitlements.plist
archive/mtga-gui/tests/: nuitka_probe_app.py
docs/: ARCHITECTURE.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README_DMG.md  README_macOS_cli.md  Windows_Onefile_Build.md  boot-white-screen-analysis.md  startup-diagnostics-notes.md
icons/: f0bb32_bg-black.icns
mac/: MTGA_GUI  MTGA_GUI_Launcher_Fixed  create_mac_app.sh  dmg_settings.py
modules/: __init__.py  cert_checker.py  cert_cleaner.py  cert_generator.py  cert_installer.py  cert_utils.py  file_operability.py  hosts_manager.py  macos_privileged_helper.py  macos_theme.py  markdown_renderer.py  network_environment.py  process_utils.py  proxy_server.py  resource_manager.py  thread_manager.py  update_checker.py
modules/actions/: cert_actions.py  hosts_actions.py  model_tests.py  network_actions.py  proxy_actions.py  proxy_ui_coordinator.py  shutdown_actions.py  update_actions.py
modules/cert/: cert_checker.py  cert_cleaner.py  cert_installer.py
modules/hosts/: hosts_manager.py  hosts_text.py
modules/platform/: macos_privileged_helper.py  privileges.py
modules/proxy/: proxy_app.py  proxy_auth.py  proxy_config.py  proxy_runtime.py  proxy_server.py
modules/runtime/: _build_version.py  operation_result.py
modules/services/: app_version.py  bootstrap.py  cert_service.py  hosts_service.py  privilege_service.py  proxy_orchestration.py  startup_checks.py  update_service.py  user_data_service.py
modules/ui/: config_group_panel.py  footer_actions.py  layout_builders.py  main_window_builder.py  main_window_deps.py  proxy_context.py  runtime_options_panel.py  tab_builders.py  tk_fonts.py  ui_helpers.py  update_dialog.py  window_context.py  window_setup.py
mtga-tauri/: .env.example  AGENTS.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
mtga-tauri/app/: app.vue
mtga-tauri/app/components/: AppShell.vue  FooterActions.vue  LogPanel.vue
mtga-tauri/app/composables/: icons.ts  mtgaTypes.ts  useMtgaApi.ts  useMtgaStore.ts
mtga-tauri/app/docs/: ui-migration.md  ui-visual-refresh.md
mtga-tauri/python-src/: pyproject.toml
mtga-tauri/src-tauri/: Cargo.toml  pyproject.toml  tauri.bundle.json  tauri.conf.json
mtga-tauri/src-tauri/capabilities/: default.json  default.toml
mtga-tauri/src-tauri/icons/: icon.icns
mtga-tauri/src-tauri/modules/cert/: cert_cleaner.py  cert_generator.py
mtga-tauri/src-tauri/modules/hosts/: hosts_state.py
mtga-tauri/src-tauri/modules/network/: network_environment.py
mtga-tauri/src-tauri/modules/platform/: macos_privileged_helper.py  privileges.py
mtga-tauri/src-tauri/modules/proxy/: proxy_runtime.py
mtga-tauri/src-tauri/modules/runtime/: resource_manager.py  resource_manager_legacy.py
mtga-tauri/src-tauri/modules/services/: app_bootstrap.py  app_metadata.py  cert_service.py  startup_checks.py  user_data_service.py
mtga-tauri/src-tauri/mtga-app/: __init__.py  __main__.py
mtga-tauri/src-tauri/mtga-app/commands/: __init__.py  hosts.py
mtga-tauri/src-tauri/mtga_app/: __init__.py
mtga-tauri/src-tauri/mtga_app/commands/: __init__.py  cert.py  common.py  hosts.py  logs.py  model_tests.py  proxy.py  update.py  user_data.py
mtga-tauri/src-tauri/src/: lib.rs
mtga-tauri/src-tauri/src/mtga_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
public/: splashscreen.html
python-src/: pyproject.toml
python-src/docs/: dev-guidelines.md
python-src/mtga_app/: __init__.py
python-src/mtga_app/commands/: common.py  (+3 more)
scripts/: install-flow-hook.ps1  release-finish.ps1  setup-gitflow.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.toml
src-tauri/src/: lib.rs
tools/: convert_iconset.py
(+51 files in other folders)
