[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtga-gui"
version = "1.2.0"
description = "基于本地代理的方式，绕过 IDE 的固定模型服务商限制"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "BiFangKNT"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "flask",
    "requests",
    "werkzeug",
    "jinja2",
    "itsdangerous",
    "click",
    "urllib3",
    "charset_normalizer",
    "idna",
    "certifi",
    "PyYAML",
]

[project.optional-dependencies]
dev = [ # 用于打包为可执行文件
]
build = []
win-build = [
    "nuitka>=2.7.12",
]
mac-build = [
    "nuitka>=2.7.12",
    "dmgbuild>=1.6.5",
    "imageio",
]

[project.scripts]
mtga-gui = "mtga_gui:gui"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/requirements.txt",
]
