[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtga-gui"
version = "1.2.0"
description = "基于本地代理的方式，绕过 IDE 的固定模型服务商限制"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "BiFangKNT"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "flask",
    "requests",
    "werkzeug",
    "jinja2",
    "itsdangerous",
    "click",
    "urllib3",
    "charset_normalizer",
    "idna",
    "certifi",
    "PyYAML",
]

[project.optional-dependencies]
dev = [ # 用于打包为可执行文件
]
build = []
win-build = [
    "nuitka>=2.7.12",
]
mac-build = [
    "nuitka>=2.7.12",
    "dmgbuild>=1.6.5",
    "imageio",
]

[project.scripts]
mtga-gui = "mtga_gui:gui"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]

[tool.pyright]
pythonVersion = "3.13"
exclude = ["archive", ".uv_cache", ".venv"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["archive"]

# 开启常用规则集：E/F 是基础错误；I=imports；B=bugbear；UP=pyupgrade；SIM=简化；
# PL= Pylint 规则子集（减少你对 Pylint 的依赖）
[tool.ruff.lint]
select  = ["E", "F", "I", "B", "UP", "SIM", "PL"]
fixable = ["ALL"]  # 尽可能自动修复

[tool.ruff.format]
line-ending = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/requirements.txt",
]
